refactor kafka parameters